added unit test for FileUtils